--- a/template/README
+++ b/template/README
@@ -14,3 +14,11 @@ node hello.js
 就可以執行這些語言囉
 
 關於本程式原始碼放在 https://github.com/ronnywang/dev-env
+
+若是在 Heroku 的執行環境
+由於 Heroku 只要超過 30 分鐘無人連線就會將資源釋出
+或者當程式更新時也會重新啟動造成檔案被清空
+因此這邊的檔案是可以亂改亂玩沒關係的。
+
+另外為了防止被跑惡意程式，這邊會有限制程式不能執行超過 3 秒
+若有更長執行需求請參考 github 內 README 自行架設
